fix: overflow

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -8,6 +8,7 @@ html, body {
   font-family: 'Roboto', sans-serif;
   background: #000000;
   color: #ffffff;
+  overflow: hidden;
 }
 
 body {
